[Themes, Bungeni UI] - Fixing alignment on reset and updating Scheduling UI for Kenya theme

--- a/portal.country_themes/trunk/ke/css/reset.css
+++ b/portal.country_themes/trunk/ke/css/reset.css
@@ -519,13 +519,13 @@ div#region-content div#content > div:first-child {
     margin: .15em 0 1em;
     height: 1.8em;
     padding: 0;
+    z-index:auto;
 }
 .contentActions a {
     padding: 0 .5em;
 }
 .contentActions li {
     float: right;
-    z-index: 4;
     height: 1.8em;
     line-height: 1.8em;
 }
@@ -541,7 +541,6 @@ div#region-content div#content > div:first-child {
 .actionMenu .actionMenuContent {
     width: 100%;
     right: 0;
-    z-index: 999999 !important;
     position: absolute;
 }
 .actionMenu .actionMenuContent ul {
@@ -574,6 +573,7 @@ dl#context_actions.actionMenu.deactivated .actionMenuContent {
     padding: 0;
     top: auto;
     left: auto;
+    z-index:auto;
 }
 dl#context_actions.actionMenu .actionMenuContent ul {
     margin: 0;
@@ -1610,13 +1610,19 @@ body.template-workspace.section-bungeni-workspace #portal-column-content div#wha
     width:99.5%;
 }
 .template-workspace.section-bungeni-admin dl.portalMessage {
-    margin-top:-25px !important;
-    margin-bottom:25px !important;
+    /*margin-top:-25px !important;*/
+    /*margin-bottom:25px !important;*/
     float:left;
     margin-left:0.2%;
     height:15px;
     clear:both;
-    width:85%;
+    width:99.6%;
+}
+.template-workspace.section-bungeni-admin dl.portalMessage dt {
+    padding-bottom:0 !important;
+}
+.template-workspace.section-bungeni-admin .formPanel div.field.even {
+    clear:both;
 }
 .template-workspace.section-bungeni-workspace dl.portalMessage {
     margin:0 auto;
@@ -1806,6 +1812,28 @@ div.overlay div.close span {
 
 /* scheduler layout
 -------------------------------------------------------------- */
+.documentContent #scheduler-layout ul.yui-nav {
+    margin: 0.5em 0 1em .6em !important;
+}
+
+.documentContent #scheduler-layout .schedule-available-item-filters {
+    margin: 0.2em 0em;
+    padding: 0.2em 0 !important;
+}
+
+.yui-dt.yui-dt-scrollable {
+    width:100% !important;
+}
+
+.yui-dt-hd table,
+.yui-dt-bd table {
+    width:100% !important;
+}
+
+.yui-skin-sam #scheduler-layout .yui-button:first-child {
+    margin: auto .25em auto .1em !important;
+}
+
 #text-records-dialog table {
     width:auto;
     margin-left:0;
@@ -1825,8 +1853,9 @@ div.overlay div.close span {
 }
 .yui-skin-sam #text-records-dialog .yui-dt-liner,
 .yui-skin-sam #scheduler-layout .yui-dt-liner {
-    padding: 4px 4px 4px 10px !important;
+    padding: 0 4px 0 10px !important;
 }
+
 .yui-skin-sam #text-records-dialog .yui-dt-first th,
 .yui-skin-sam #scheduler-layout .yui-dt-first th {
     padding: 0;
@@ -1851,7 +1880,11 @@ div.overlay div.close span {
 }
 .yui-skin-sam #scheduler-layout .yui-split-button button, 
 .yui-skin-sam #scheduler-layout .yui-menu-button button {
-    padding-right: 20px;
+    padding-right: 15px;
+}
+.yui-skin-sam .schedule-available-item-filters .yui-split-button button, 
+.yui-skin-sam .schedule-available-item-filters .yui-menu-button button {
+    padding-right: 20px !important;
 }
 .yui-skin-sam #scheduler-layout .yui-dt0-col-row_controls {
     max-width:115px !important;
